:rocket: banner section done

--- a/index.html
+++ b/index.html
@@ -16,25 +16,28 @@
                 <li>Features</li>
                 <li>How It Works</li>
                 <li>Why It's Different</li>
-                <!-- <li>
-                    <button>Get Early Access</button>
-                </li> -->
-                <!-- <a href=""><button class="btn-primary">Get Early Access</button></a> -->
             </ul>
-            <div class="btn-primary">
-              <button>Get Early Access</button>
+            <div class="nav-btn">
+                <button>Get Early Access</button>
             </div>
 
         </nav>
-        <div class="banner">
+        <div class="banner-container">
+            <!-- <img src="assets/hero-bg.png" alt=""> -->
+
+            <button class="banner-btn">Early Access Now Open</button>
+
             <div class="banner-content">
-                  <h1 class="banner-greetings">Structured Thinking,</h1>
-                  <h1 class="banner-title">Not Just Note-Taking.</h1>
-                  <p class="banner-description">A private space to store notes, links, and learning summaries — designed to
-                    help you think clearly, connect ideas, and turn learning into long-term knowledge.
-                </p>
-                 <button class="btn-primary">Start Building </button>
-                 <button class="btn-primary">see How It Works</button>
+                <h1 class="banner-title"> <span class="text">Structured Thinking,</span><br><span
+                        class="text-primary">Not Just Note-Taking.</span></h1>
+                <p class="banner-description text">A private space to store notes, links, and learning summaries —
+                    designed to <br>
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+
+            </div>
+            <div>
+                <button class="banner-btn-two">Start Building</button>
+                <button class="banner-btn-three">See How It Works</button>
             </div>
         </div>
     </header>
