:hammer: working on footer section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
             </div>
         </div>
     </header>
+
+    <footer class="footer-section">
+        <div class="footer-container">
+          <div>logo</div>
+          <div class="footer-social-links">social links</div>
+        </div>
+    </footer>
 </body>
 
 </html>
