--- a/index.html
+++ b/index.html
@@ -108,10 +108,22 @@
             </div>
 
         </section>
-        
+        <section class="Early-Access-section">
+            <div class="Early-Access-container">
+                <h3 class="Early-Access-title">Ready to think more clearly?</h3>
+                <p class="Early-Access-description">
+                    Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.
+                </p>
+            </div>
+            <div>
+                <button class="Early-Access-btn">Get Early Access</button>
+                <p class="Early-Access-description-two">Free during early access • No credit card needed</p>
+            </div>
+
+        </section>
     </main>
     <footer>
-
+       
     </footer>
 </body>
 
