:mamo: alignment issue fix

--- a/index.html
+++ b/index.html
@@ -48,8 +48,6 @@
                 <div class="notes-container">
                     <div class="notes-image">
                         <img src="assets/Vector.png" alt="">
-
-
                     </div>
                     <h4 class="notes-title">Scattered notes</h4>
                     <p class="notes-description">
@@ -108,23 +106,31 @@
             </div>
 
         </section>
-        <section class="Early-Access-section">
-            <div class="Early-Access-container">
-                <h3 class="Early-Access-title">Ready to think more clearly?</h3>
-                <p class="Early-Access-description">
+        <section class="early-access-section">
+            <div class="early-access-container">
+                <h3 class="early-access-title">Ready to think more clearly?</h3>
+                <p class="early-access-description">
                     Join thousands of learners who are building their personal knowledge vaults. <br> Start free, no credit card required.
                 </p>
             </div>
             <div>
-                <button class="Early-Access-btn">Get Early Access</button>
-                <p class="Early-Access-description-two">Free during early access • No credit card needed</p>
+                <button class="early-access-btn">Get Early Access</button>
+                <p class="early-access-description">Free during early access • No credit card needed</p>
             </div>
 
         </section>
     </main>
-    <footer>
-       
-    </footer>
+    <!-- <footer>
+        <section class="footer-section">
+        <div>
+        <img src="assets/logo-footer.png" alt="">
+        <ul>
+            <li>Social Links</li>
+        </ul>
+       </div>
+
+        </section>
+    </footer> -->
 </body>
 
 </html>
